Version 1.4.3+svn:
 * miscellaneous and bug fixes:
   * fix bug #11630 (preventing redo and rename during opponent's turn)
 * language and i18n:
   * updated translations: Finnish, German, Greek, Lithuanian 
   * langcode change: moved gl_ES to gl

Version 1.4.3:
 * campaigns:
   * The Rise of Wesnoth:
     * fixed the Wesfolk Outcast line's distract ability not working
 * language and i18n:
   * new translations: Arabic, Friulian, Macedonian
   * updated translations: Czech, Danish, Dutch, Estonian, Finnish, French,
     German, Hungarian, Japanese, Polish, Russian, Serbian, Slovak, Spanish
   * fonts: DejaVuSans 2.25
   * manual: updated screenshots to match UI rearrangements
 * WML engine:
   * fix [teleport] capturing villages with the wrong side (bug #11683)
 * campaignd
   * made campaign server use gzip compression for networking
   * made campaign server detect if client can receive gzipped data
   * made campaign server use gzip for storing addons
   * added configuraion option to choose gzip compression level
 * miscellaneous and bug fixes:
   * fixed parser bug that prevented loading binary data strings
   * starting a campaign without any installed now gives an error.
   * fixed issues with campaign info in non-compressed saved games
     (bug #11386)
   * Backported graceful restart feature to server
   * Improved connection stability with slow connections.
   * Implemented send_file to reduce memory usage when sending files
   * Fixed a mememory leak in networking code
   * fixed an alignement issue which caused a SIGBUS on a Sparc 
     (debian bug #426318)
   * Fixed tokenizer not to strip CR from quoted string becaue it would destroy
     images transfered over network
   * added some includes to fix compilation problems with Sun Studio 12 
     (patch #1066)
   * fixed null-pointer reference in network code

Version 1.4.2:
 * campaigns
   * Liberty
     * Backport r25650 to fix graphics glitch (bug 11438)
 * language and i18n: