@@ -1,9 +1,10 @@
 Version 1.4.3+svn:
- * miscellaneous and bug fixes:
-   * fix bug #11630 (preventing redo and rename during opponent's turn)
  * language and i18n:
    * updated translations: Finnish, German, Greek, Lithuanian 
    * langcode change: moved gl_ES to gl
+ * miscellaneous and bug fixes:
+   * fix bug #11630 (preventing redo and rename during opponent's turn)
+   * Added recursion preventarion to [kill] fire_event=yes [/kill]
 
 Version 1.4.3:
  * campaigns:
